--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -7,7 +7,13 @@
   -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
   box-shadow: 3px 3px rgba(0,0,0,0.1);
   margin: 20px 0 20px 0;
+  margin: 0px 0 0px 0;
   overflow: auto;
+}
+
+.highlight .highlight {
+  border: none;
+  box-shadow: none;
 }
 
 code {
