--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -9,6 +9,7 @@ pre.highlight {
   margin: 20px 0 20px 0;
   margin: 0px 0 0px 0;
   overflow: auto;
+  font-size: medium;
 }
 
 .highlight .highlight {
