--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -10,7 +10,7 @@ pre.highlight {
   margin: 0px 0 0px 0;
   overflow: auto;
   font-size: medium;
-  font-weight: 300;
+  font-weight: bold;
 }
 
 .highlight .highlight {
