--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,6 +1,6 @@
 
 pre.highlight {
-  background-color: #323131;
+  background-color: #333;
   padding: 7px 7px 7px 10px;
   border: 1px solid #ddd;
   -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
@@ -9,8 +9,8 @@ pre.highlight {
   margin: 20px 0 20px 0;
   margin: 0px 0 0px 0;
   overflow: auto;
-  font-weight: bolder !important;
   font-size: small !important;
+  font-weight: 600 !important;
 }
 
 .highlight .highlight {
