--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,6 +1,6 @@
 
 pre.highlight {
-  background-color: #333;
+  background-color: rgb(43, 43, 43);
   padding: 7px 7px 7px 10px;
   border: 1px solid #ddd;
   -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
