--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,5 +1,5 @@
 
-pre.highlight {
+.highlight {
   background-color: rgba(240, 246, 248, 0.882);
   padding: 7px 7px 7px 10px;
   border: 1px solid #ddd;
