--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -9,7 +9,7 @@
   margin: 20px 0 20px 0;
   margin: 0px 0 0px 0;
   overflow: auto;
-  font-size: smaller !important;
+  font-size: medium !important;
   font-weight: 500 !important;
 }
 
