--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,5 +1,5 @@
 
-.highlight {
+pre.highlight {
   background-color: rgba(224, 224, 224, 0.882);
   padding: 7px 7px 7px 10px;
   border: 1px solid #ddd;
@@ -10,7 +10,7 @@
   margin: 0px 0 0px 0;
   overflow: auto;
   font-size: medium !important;
-  font-weight: 500 !important;
+  font-weight: 600 !important;
 }
 
 .highlight .highlight {
