--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -9,7 +9,7 @@ pre.highlight {
   margin: 20px 0 20px 0;
   margin: 0px 0 0px 0;
   overflow: auto;
-  font-size: medium !important;
+  font-size: smaller !important;
   font-weight: 600 !important;
 }
 
