--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -12,7 +12,7 @@ pre.highlight {
   font-size: 80% !important;
   font-weight: 600 !important;
   -webkit-font-smoothing: subpixel-antialiased;
-  filter: invert()
+  filter: invert(100%);
 }
 
 .highlight .highlight {
